# wow_classic_fishing_bot

./: .gitignore  README.md  _FEATURE_FLAGS.py  bot.py  bot_with_gui.py  build.py  constants.py  debug.py  gui.py  image_rec.py  logger.py  loot_constants.py  looter.py  prompt.py  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
cloud/: supa.py
data_export/: splash_images_export.ipynb
inference/: find_bobber.py  splash_classifier.py
logs/: loot_analysis.ipynb
move/: move_functions.py  move_gui.py
save_images/: unknown_loot_analysis.ipynb
src/: _FEATURE_FLAGS.py  __main__.py  colors.py  constants.py  debug.py  gui.py  logger.py
src/cloud/: supa.py
src/cloud/data/: XbsgAJG8sbA2.pkl
src/inference/: find_bobber.py  splash_classifier.py
src/move/: move_functions.py  move_gui.py
supabase/: supa.py
supabase/data/: iKnsfabt73hB.pkl
