[tool.poetry]
name = "wow-fishing"
version = "0.1.0"
description = "Automated WoW Classic Fishing"
authors = ["Matthew Miglio <matthew@pyclashbot.app>",]
readme = "README.md"

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyautogui = "^0.9.54"
numpy = "^2.1.2"
onnxruntime = "^1.19.2"
torch = "^2.5.0"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
cx-freeze = "^7.2.6"
screeninfo = "^0.8.1"
supabase = "^2.11.0"
psutil = "^6.1.1"


# [tool.poetry.group.build.dependencies]
# cx-freeze = "^7.2.5"
# poethepoet = "^0.30.0"

[tool.poe.tasks]
build-dist = "python build.py"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
